# esp32-WS2811

./: .gitignore  Cargo.toml  README.md  flash.ps1  readme.md
.cargo/: config
src/: animations.rs  colors.rs  main.rs  pins.rs
